# modmail

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml  rust_problem_matchers.json
.github/workflows/: ci.yml  release.yml
migrations/: 0_init.sql
src/: config.rs  database.rs  logging.rs  main.rs
src/bot/: mod.rs  modmail.rs
src/commands/: about.rs  close.rs  delete.rs  edit.rs  info.rs  link.rs  mod.rs  modmail.rs  ping.rs  reply.rs
src/events/: guild_create.rs  interaction_create.rs  message_create.rs  message_delete.rs  message_update.rs  mod.rs  new_audit_log_entry.rs  ready.rs
src/util/: consts.rs  formatting.rs  mod.rs  response_ext.rs  sqlite_id.rs  tasks.rs
twilight/: Cargo.toml
twilight/src/: lib.rs
