[package]
name = "modmail"
version = "0.0.0"
description = "Discord modmail bot"
license = "MIT"
authors = ["Purpzie"]
repository = "https://github.com/purpzie/modmail"
include = ["src", "README.md", "LICENSE"]
edition = "2021"
publish = false

[features]
default = ["backtrace"]

backtrace = ["anyhow/backtrace"]

[profile.release]
codegen-units = 1
lto = true

[dependencies]
twilight = {path = "./twilight"}

ahash = {version = "0.8.3", features = ["std", "runtime-rng"], default-features = false}
anyhow = {version = "1.0.71", features = ["std"], default-features = false}
dashmap = {version = "5.4.0", default-features = false}
futures = {version = "0.3.28", features = ["std", "async-await"], default-features = false}
indoc = {version = "2.0.1", default-features = false}
log = {version = "0.4.18", features = ["std", "max_level_info", "release_max_level_info"], default-features = false}
serde = {version = "1.0.163", features = ["std", "derive"], default-features = false}
serde_yaml = {version = "0.9.21", default-features = false}
sqlx = {version = "0.6.3", features = ["sqlite", "macros", "migrate", "runtime-tokio-rustls"], default-features = false}
tinylog = {version = "4.0.0", features = ["log", "tracing", "detect-color", "parking_lot"], default-features = false}
tokio = {version = "1.28.2", features = ["rt-multi-thread", "parking_lot", "signal"], default-features = false}
tracing = {version = "0.1.37", features = ["std", "max_level_debug", "release_max_level_debug"], default-features = false}
tracing-subscriber = {version = "0.3.17", features = ["std", "registry", "parking_lot", "smallvec"], default-features = false}
